--- a/views/dcatheorywelcomepage.ejs
+++ b/views/dcatheorywelcomepage.ejs
@@ -301,123 +301,123 @@
                             
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter1"><button type="button" class="btn btn-link m-2">Chapter-1 (docx) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class=" col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter2"><button type="button" class="btn btn-link m-2">Chapter-2 (docx) <i class="fas fa-angle-right"></i></button></a>
                               
                               
                                 </div>
 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
 
-                                <a href="dca103onlineclasschapter3"><button type="button" class="btn btn-link m-2">Chapter-3 (word) <i class="fas fa-angle-right"></i></button></a>
+                                <a href="dca103onlineclasschapter3"><button type="button" class="btn btn-link m-2">Chapter-3 (docx) <i class="fas fa-angle-right"></i></button></a>
 
                                 </div>
                                 
                                 <div class=" col-lg-3 col-md-6 col-sm-6"> 
                                 
-                              <a href="dca103onlineclasschapter4"><button type="button" class="btn btn-link m-2">Chapter-4 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter4"><button type="button" class="btn btn-link m-2">Chapter-4 (docx) <i class="fas fa-angle-right"></i></button></a>
 
                             </div>
                             
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
 
-                              <a href="dca103onlineclasschapter5"><button type="button" class="btn btn-link m-2">Chapter-5 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter5"><button type="button" class="btn btn-link m-2">Chapter-5 (docx) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter6"><button type="button" class="btn btn-link m-2">Chapter-6 (docx) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6">
                               
-                              <a href="dca103onlineclasschapter7"><button type="button" class="btn btn-link m-2">Chapter-7 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter7"><button type="button" class="btn btn-link m-2">Chapter-7 (docx) <i class="fas fa-angle-right"></i></button></a>
                               
                               </div>
                               
                               <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter8"><button type="button" class="btn btn-link m-2">Chapter-8 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter8"><button type="button" class="btn btn-link m-2">Chapter-8 (docx) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
 
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
                               
-                              <a href="dca103onlineclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 (word) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter9"><button type="button" class="btn btn-link m-2">Chapter-9 (docx) <i class="fas fa-angle-right"></i></button></a>
                             
                             </div>
                             
                             <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 (excel) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter10"><button type="button" class="btn btn-link m-2">Chapter-10 (xlsx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter11"><button type="button" class="btn btn-link m-2">Chapter-11 (excel) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter11"><button type="button" class="btn btn-link m-2">Chapter-11 (xlsx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter12"><button type="button" class="btn btn-link m-2">Chapter-12 (excel) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter12"><button type="button" class="btn btn-link m-2">Chapter-12 (xlsx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter13"><button type="button" class="btn btn-link m-2">Chapter-13 (excel) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter13"><button type="button" class="btn btn-link m-2">Chapter-13 (xlsx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter14"><button type="button" class="btn btn-link m-2">Chapter-14 (excel) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter14"><button type="button" class="btn btn-link m-2">Chapter-14 (xlsx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter15"><button type="button" class="btn btn-link m-2">Chapter-15 (excel) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter15"><button type="button" class="btn btn-link m-2">Chapter-15 (xlsx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter16"><button type="button" class="btn btn-link m-2">Chapter-16 (excel) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter16"><button type="button" class="btn btn-link m-2">Chapter-16 (xlsx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter17"><button type="button" class="btn btn-link m-2">Chapter-17 (pptx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter18"><button type="button" class="btn btn-link m-2">Chapter-18 (pptx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter19"><button type="button" class="btn btn-link m-2">Chapter-19 (pptx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
                                 
                                 <div class="col-lg-3 col-md-6 col-sm-6"> 
                             
-                              <a href="dca103onlineclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (powerpoint) <i class="fas fa-angle-right"></i></button></a>
+                              <a href="dca103onlineclasschapter20"><button type="button" class="btn btn-link m-2">Chapter-20 (pptx) <i class="fas fa-angle-right"></i></button></a>
                                 
                                 </div>
 
