--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -33,7 +33,7 @@
               
               <td colspan="3" class="fw-bold fs-5 text-secondary border text-center">
                   
-                  <i class="fas fa-clock bgGradientBlue text-white border p-1 fs-6"></i> Your latest record </td>
+                  <i class="fas fa-clock bgColor"></i> Your latest record </td>
               
             </tr>
             
@@ -182,7 +182,7 @@
               
               <td colspan="3" class="fw-bold fs-5 text-secondary border bg-white text-center">
                   
-                  Verify Assignment </td>
+                  <i class="fas fa-user-check bgColor"></i> Verify assignment </td>
               
             </tr>
             
@@ -193,14 +193,14 @@
                 <tr>
                     
                     <td colspan="3"><a href="stdScoreboard" class="text-muted fs-6 fw-normal myLink">
-                        <i class="fas fa-check bgGradientBlue text-white border p-1 fs-6"></i> Check your assignment record...</a></td>
+                        <i class="fas fa-check-circle"></i> Check your assignment record...</a></td>
                     
                 </tr>
                 
                 <tr>
                     
                     <td colspan="3"><a href="stdTopPerformers" class="text-muted fs-6 fw-normal myLink">
-                        <i class="fas fa-check bgGradientBlue text-white border p-1 fs-6"></i>  Check other who answer assignment...</a></td>
+                        <i class="fas fa-check-circle"></i>  Check other who answer assignment...</a></td>
                     
                 </tr>
 
@@ -224,7 +224,7 @@
               
               <td colspan="5" class="fw-bold fs-6 text-secondary border text-center mb-2">
                   
-                  <i class="fas fa-user-friends bgGradientBlue text-white border p-1 fs-6"></i> Who test today </td>
+                  <i class="fas fa-user-friends bgColor"></i> Who test today </td>
               
             </tr>
             
@@ -490,7 +490,7 @@
       </div>
       <div class="modal-body lead">
         <p><a href="dcatheorywelcomepage" class="text-info">
-            <i class="far fa-dot-circle bgColorr"></i> <span class="lessonHover text-secondary"> Learn Computer by Theory </span></a></p>
+            <i class="far fa-dot-circle bgColor"></i> <span class="lessonHover text-secondary"> Learn Computer by Theory </span></a></p>
         <p><a href="dcapracticalwelcomepage" class="text-info"> 
         <i class="far fa-dot-circle bgColor"></i><span class="lessonHover text-secondary"> Learn Computer by Practical </span></a></p>
         <p><a href="dcaDownloadMaterialPage" class="text-info"> 
