--- a/views/stdScoreboard.ejs
+++ b/views/stdScoreboard.ejs
@@ -38,7 +38,7 @@
      
       <!-- --------------assignment record table------------------ -->
     
-      <div class="shadow-sm mx-auto fs-4 fw-normal mb-0 text-center border p-2 mt-3 mb-3" style="max-width: 450px"> 
+      <div class="shadow-sm mx-auto fs-4 fw-normal mb-0 text-center border rounded p-2 mt-3 mb-3" style="max-width: 300px"> 
       
       Assignment Record Table </div>
       
@@ -52,7 +52,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border p-1"></i> DCA-101 : Fundamentals of Computer </td>
+              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-101 : Fundamentals of Computer </td>
               
             </tr>
             
@@ -360,7 +360,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border p-1"></i> DCA-102 : Operating System </td>
+              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-102 : Operating System </td>
               
             </tr>
             
@@ -676,7 +676,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border p-1"></i> DCA-103 : Office Automation Software </td>
+              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-103 : Office Automation Software </td>
               
             </tr>
             
@@ -1259,7 +1259,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border p-1"></i> DCA-104 : Internet Technology </td>
+              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-104 : Internet Technology </td>
               
             </tr>
             
@@ -1460,7 +1460,7 @@
             
             <tr>
               
-             <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border p-1"></i> DCA-105 : Computer Graphics </td>
+             <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-105 : Computer Graphics </td>
               
             </tr>
             
@@ -1841,7 +1841,7 @@
             
             <tr>
               
-              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border p-1"></i> DCA-106 : Desktop Publishing </td>
+              <td colspan="2" class="fw-bold border text-center mb-2"> <i class="far fa-stop-circle bgGradientBlue text-white border"></i> DCA-106 : Desktop Publishing </td>
               
             </tr>
             
