--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -40,21 +40,17 @@
      
       <!-- --------------assignment record table------------------ -->
     
-      <div class="shadow-sm mx-auto bg-white fs-5 fw-normal mb-0 text-center border p-2 mt-3 mb-3" style="max-width: 450px"> 
-      
-      <i class="far fa-laugh-beam bgGradientBlue text-white border"></i> Assignment chhangtute List  <i class="far fa-laugh-beam bgGradientBlue text-white border"></i></div>
-            
       <div class="table-responsive">
         
-        <table class="table table-sm shadow-sm">
+        <table class="table table-sm shadow-sm mt-3">
           
           <thead>
             
             <tr>
               
-              <td colspan="6" class="fw-normal border bg-white mb-2"> 
+              <td colspan="6" class="fs-5 fw-bold text-secondary border bg-white m-2 p-2 text-center"> 
               
-              <i class="far fa-stop-circle bgGradientBlue text-white border p-0"></i> Student Attempt List </td>
+              <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-2"></i> Assignment chhangte List <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-2"></i></td>
               
             </tr>
             
