--- a/views/home.ejs
+++ b/views/home.ejs
@@ -38,7 +38,7 @@
         
     <div class="row">
             
-            <div class="fs-2 text-secondary fw-light text-center pb-2"> A smarter way to learn computer courses </div>
+            <div class="fs-2 text-secondary fw-light text-center pb-2"> A smarter way to learn computer lessons </div>
           
           <div class="mx-auto m-3 col-lg-4 col-md-6 col-xs-12"> 
             
@@ -52,7 +52,7 @@
             
             <img src="img/syllabus.png" class="card-img-top mx-auto" alt="syllabus" style="height:150px; width:200px">
             
-             <div class="mx-auto mb-2"><a href="std/loginStudent"><button class="btn text-center text-info border"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>
+             <div class="mx-auto mb-3 mt-3"><a href="std/loginStudent"><button class="btn text-center text-info border homeLinkButton"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>
           
             </div>
 
@@ -71,7 +71,7 @@
             
             <img src="img/video-tutorials.png" class="card-img-top mx-auto" alt="video-tutorials" style="height:150px; width:200px">
             
-            <div class="mx-auto mb-2"><a href="std/loginStudent"><button class="btn text-center text-primary border"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>
+            <div class="mx-auto mb-3 mt-3"><a href="std/loginStudent"><button class="btn text-center text-primary border homeLinkButton"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>
             
             </div>
             
@@ -89,7 +89,7 @@
                 
                 <img src="img/questionBank.png" class="card-img-top mx-auto" alt="question bank" style="height:150px; width:200px">
                 
-                <div class="mx-auto mb-2"><a href="std/loginStudent"><button class="btn text-center text-success border"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>                
+                <div class="mx-auto mb-3 mt-3"><a href="std/loginStudent"><button class="btn text-center text-success border homeLinkButton"> Login to Explore <i class="fas fa-arrow-right"></i></button></a></div>                
                
               
             </div>
@@ -99,7 +99,6 @@
     </div>
 
     <h2 class="display-6 text-center mb-4 mt-4">Compare pricing</h2>
-
     <div class="table-responsive">
       <table class="table text-center">
         <thead>
@@ -121,16 +120,27 @@
             <th scope="row" class="text-start">Any Other Student</th>
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
-            <td> Rs. 499/Session</td>
+            <td> Rs. 499/se</td>
           </tr>
         </tbody>
-
       </table>
     </div>
-        
-        
-       
+    
+    <footer class="pt-4 my-md-5 pt-md-5 border-top">
+    <div class="row">
+      <div class="col-6 col-md">
+        <h5>About</h5>
+        <ul class="list-unstyled text-small">
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/message">Message</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/contactus">Contact us</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/privacy">Privacy Policy</a></li>
+          <li class="mb-1"><a class="link-secondary text-decoration-none" href="/terms">Terms</a></li>
+        </ul>
+      </div>
     </div>
+  </footer>
+    
+  </div>
 
     <%- include('layouts/scripts') -%>
     
