livesite a upload theih a ni ta

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -22,9 +22,9 @@
 
     <main role="main" class="container">
         
-        <div class="mission-header mt-4 p-3 pb-md-4 mx-auto text-center">
-      <h1 class="display-6 fw-light pb-2">Objective</h1>
-      <p class="fs-5 text-muted">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atanga pawha thiam taka an lo inzir theihna tura duan a ni.</p>
+    <div class="mission-header mt-4 p-3 pb-md-4 mx-auto text-center">
+    <h1 class="display-6 fw-light pb-2">Objective</h1>
+    <p class="fs-5 text-muted">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atanga pawha thiam taka an lo inzir theihna tura duan a ni.</p>
     </div>
       
     </main>
@@ -117,7 +117,7 @@
             <td> - </td>
           </tr>
           <tr>
-            <th scope="row" class="text-start">Any Other Student</th>
+            <th scope="row" class="text-start">Outside Student</th>
             <td></td>
             <td><svg class="bi" width="24" height="24"><use xlink:href="#check"/></svg></td>
             <td> Rs. 499/se</td>
