--- a/views/layouts/staffMenu.ejs
+++ b/views/layouts/staffMenu.ejs
@@ -4,7 +4,11 @@
         
        
         <div class="mb-2 mb-md-0">
+             <% if( username == 'tmapuia') { %>
+            <a href="/auth/registerStaff"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus text-primary"></i> Add Staff </button></a>
+            <% } %>
             <a href="/register"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus text-primary"></i> Add Student </button></a>
+            
             <a href="/viewFee"><button type="button" class="btn btn-sm btn-outline-primary me-1">
               <i class="fas fa-rupee-sign text-primary"></i> View Fee 
             </button></a>
