--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -50,7 +50,7 @@
               
               <td colspan="6" class="fs-5 fw-bold text-secondary border bg-white m-2 p-2 text-center"> 
               
-              <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-2"></i> Assignment chhangte List <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-2"></i></td>
+              <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-2"></i> Assignment chhangtute List <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-2"></i></td>
               
             </tr>
             
