--- a/views/stdTopPerformers.ejs
+++ b/views/stdTopPerformers.ejs
@@ -48,7 +48,7 @@
             
             <tr>
               
-              <td colspan="6" class="fs-5 fw-bold text-secondary border bg-white m-2 p-2 text-center"> 
+              <td colspan="6" class="fs-5 fw-bold text-secondary border bg-light m-2 p-2 text-center"> 
               
               <i class="far fa-stop-circle bgGradientBlue text-white border p-0 me-2"></i> Assignment chhangtute List <i class="far fa-stop-circle bgGradientBlue text-white border p-0 ms-2"></i></td>
               
