--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,7 +23,7 @@
     <main role="main" class="container">
         
     <div class="mission-header mt-4 p-3 pb-md-4 mx-auto text-center">
-    <h1 class="display-6 fw-light pb-2">Objective</h1>
+    <h1 class="display-6 fw-normal pb-2">Objective</h1>
     <p class="fs-5 text-muted">Khawiah pawh, internet signal awmna apiangah mi'n computer a zir theihna tur leh phone atanga pawha thiam taka an lo inzir theihna tura duan a ni.</p>
     </div>
       
@@ -38,7 +38,7 @@
         
     <div class="row">
             
-            <div class="fs-2 text-secondary fw-light text-center pb-2"> A smarter way to learn computer lessons </div>
+            <div class="fs-2 text-secondary fw-light text-center pb-2"> A smarter way to learn dca courses </div>
           
           <div class="mx-auto m-3 col-lg-4 col-md-6 col-xs-12"> 
             
