--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -31,7 +31,7 @@
               
              <tr>
               
-              <td colspan="3" class="fw-bold fs-5 text-secondary border text-center">
+              <td colspan="3" class="fw-bold fs-5 text-secondary bg-light border text-center">
                   
                   <i class="fas fa-clock bgColor"></i> Your latest record </td>
               
@@ -180,7 +180,7 @@
               
              <tr>
               
-              <td colspan="3" class="fw-bold fs-5 text-secondary border bg-white text-center">
+              <td colspan="3" class="fw-bold fs-5 text-secondary border bg-light text-center">
                   
                   <i class="fas fa-user-check bgColor"></i> Verify assignment </td>
               
@@ -222,7 +222,7 @@
               
               <tr>
               
-              <td colspan="5" class="fw-bold fs-6 text-secondary border text-center mb-2">
+              <td colspan="5" class="fw-bold fs-6 text-secondary border bg-light text-center mb-2">
                   
                   <i class="fas fa-user-friends bgColor"></i> Who test today </td>
               
