--- a/views/stdDashboard.ejs
+++ b/views/stdDashboard.ejs
@@ -25,13 +25,13 @@
         
       <div class="table-responsive mt-2 mb-2 col-lg-6 col-md-6 col-xs-12">
         
-        <table class="table table-sm shadow-sm mx-auto" style="max-width:500px">
+        <table class="table table-sm table-striped table-hover shadow-sm mx-auto" style="max-width:500px">
           
           <thead>
               
              <tr>
               
-              <td colspan="3" class="fw-bold fs-5 text-secondary bg-light border text-center">
+              <td colspan="3" class="fw-bold fs-5 bgColor bg-light border text-center">
                   
                   <i class="fas fa-clock bgColor"></i> Your latest record </td>
               
@@ -180,9 +180,9 @@
               
              <tr>
               
-              <td colspan="3" class="fw-bold fs-5 text-secondary border bg-light text-center">
+              <td colspan="3" class="fw-bold fs-5 bgColor border bg-light text-center">
                   
-                  <i class="fas fa-user-check bgColor"></i> Verify assignment </td>
+                  <i class="fas fa-user-check"></i> Verify assignment </td>
               
             </tr>
             
@@ -192,15 +192,15 @@
             
                 <tr>
                     
-                    <td colspan="3"><a href="stdScoreboard" class="text-muted fs-6 fw-normal myLink">
-                        <i class="fas fa-check-circle"></i> Check your assignment record...</a></td>
+                    <td colspan="3"><a href="stdScoreboard" class="text-muted fs-6 fw-normal">
+                        <i class="fas fa-check-circle ps-2"></i> <span class="myLink"> Check your assignment record...</span></a></td>
                     
                 </tr>
                 
                 <tr>
                     
-                    <td colspan="3"><a href="stdTopPerformers" class="text-muted fs-6 fw-normal myLink">
-                        <i class="fas fa-check-circle"></i>  Check other who answer assignment...</a></td>
+                    <td colspan="3"><a href="stdTopPerformers" class="text-muted fs-6 fw-normal">
+                        <i class="fas fa-check-circle ps-2"></i> <span class="myLink"> Check other who answer assignment...</span></a></td>
                     
                 </tr>
 
@@ -216,13 +216,13 @@
         
       <div class="table-responsive">
         
-        <table class="table table-sm shadow-sm">
+        <table class="table table-sm table-striped table-hover shadow-sm">
           
           <thead>
               
               <tr>
               
-              <td colspan="5" class="fw-bold fs-6 text-secondary border bg-light text-center mb-2">
+              <td colspan="5" class="fw-bold fs-6 bgColor border bg-light text-center mb-2">
                   
                   <i class="fas fa-user-friends bgColor"></i> Who test today </td>
               
