--- a/views/stdList.ejs
+++ b/views/stdList.ejs
@@ -65,8 +65,7 @@
       
       <td><%= students[i].phone %></td>
       
-      <td class="ps-3">  <a href="/assignment/checkScore/<%= students[i]._id %>" class="text-muted">
-                           click here... </a></td>
+      <td class="ps-3">  <a href="/assignment/checkScore/<%= students[i]._id %>" class="text-muted"> click here... </a></td>
       
       <td>
         
