--- a/views/layouts/staffMenu.ejs
+++ b/views/layouts/staffMenu.ejs
@@ -5,12 +5,12 @@
        
         <div class="mb-2 mb-md-0">
              <% if( username == 'tmapuia') { %>
-            <a href="/auth/registerStaff"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus text-primary"></i> Add Staff </button></a>
+            <a href="/auth/registerStaff"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus"></i> Add Staff </button></a>
             <% } %>
-            <a href="/register"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus text-primary"></i> Add Student </button></a>
+            <a href="/register"><button type="button" class="btn btn-sm btn-outline-primary me-1">  <i class="fas fa-user-plus"></i> Add Student </button></a>
             
             <a href="/viewFee"><button type="button" class="btn btn-sm btn-outline-primary me-1">
-              <i class="fas fa-rupee-sign text-primary"></i> View Fee 
+              <i class="fas fa-rupee-sign"></i> View Fee 
             </button></a>
           
         </div>
